Fix toast style and avoid text cropping.

--- a/src/assets/styles/_common.scss
+++ b/src/assets/styles/_common.scss
@@ -49,6 +49,7 @@ code {
   --toastify-icon-color-error: var(--toastify-color-error);
   --toastify-text-color-light: #FFFFFF;
   --toastify-color-dark: #FFF;
+  --toastify-toast-width: auto;
 }
 .Toastify__close-button {
   color: #fff;
